--- a/snippets/STGNN_v2.ipynb
+++ b/snippets/STGNN_v2.ipynb
@@ -148,42 +148,63 @@
    "outputs": [],
    "source": [
     "class GraphConvolution(nn.Module):\n",
+    "    # 初始化图卷积层\n",
     "    def __init__(self, in_features, out_features):\n",
-    "        super(GraphConvolution, self).__init__()\n",
-    "        self.in_features = in_features\n",
-    "        self.out_features = out_features\n",
+    "        super(GraphConvolution, self).__init__()  # 调用基类的构造函数来正确地初始化模块\n",
+    "        self.in_features = in_features  # 输入特征数量\n",
+    "        self.out_features = out_features  # 输出特征数量\n",
+    "        # 定义一个可学习的权重参数\n",
     "        self.weight = nn.Parameter(torch.FloatTensor(in_features, out_features))\n",
+    "        # 定义一个可学习的偏置参数\n",
     "        self.bias = nn.Parameter(torch.FloatTensor(out_features))\n",
+    "        # 调用reset_parameters方法来初始化权重和偏置\n",
     "        self.reset_parameters()\n",
-    "\n",
+    "    # 参数初始化方法\n",
     "    def reset_parameters(self):\n",
+    "        # 根据权重的大小计算标准差，用于参数初始化\n",
     "        stdv = 1. / np.sqrt(self.weight.size(1))\n",
+    "        # 使用均匀分布初始化权重\n",
     "        self.weight.data.uniform_(-stdv, stdv)\n",
+    "        # 使用均匀分布初始化偏置\n",
     "        self.bias.data.uniform_(-stdv, stdv)\n",
-    "\n",
+    "    # 前向传播函数\n",
     "    def forward(self, input, adj):\n",
+    "        # 计算输入特征和权重的矩阵乘法，得到支持矩阵\n",
     "        support = torch.matmul(input, self.weight)\n",
+    "        # 将邻接矩阵和支持矩阵进行矩阵乘法，得到输出特征\n",
     "        output = torch.matmul(adj, support)\n",
+    "        # 将输出特征与偏置相加，得到最终的图卷积输出\n",
     "        return output + self.bias\n",
     "\n",
-    "class STGNN(nn.Module):\n",
-    "    def __init__(self, num_features, num_nodes, hidden_size, num_layers,  num_timesteps=num_timesteps_train, dropout=0.5):\n",
-    "        super(STGNN, self).__init__()\n",
-    "        self.gc1 = GraphConvolution(num_features, hidden_size)\n",
-    "        self.lstm = nn.LSTM(input_size=hidden_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
-    "        self.fc = nn.Linear(hidden_size, 1)  # Assuming the target is per node per timestep\n",
     "\n",
+    "class STGNN(nn.Module):\n",
+    "    # 初始化STGNN模块\n",
+    "    def __init__(self, num_features, num_nodes, hidden_size, num_layers, num_timesteps=num_timesteps_train, dropout=0.5):\n",
+    "        super(STGNN, self).__init__()  # 调用基类的构造函数来正确地初始化模块\n",
+    "        # 初始化图卷积层，输入特征数为num_features，输出特征数为hidden_size\n",
+    "        self.gc1 = GraphConvolution(num_features, hidden_size)\n",
+    "        # 初始化LSTM层，输入大小为num_nodes * hidden_size，输出大小为hidden_size\n",
+    "        self.lstm = nn.LSTM(input_size=num_nodes * hidden_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
+    "        # 初始化全连接层，从hidden_size转换到输出大小为num_nodes * num_timesteps\n",
+    "        self.fc = nn.Linear(hidden_size, num_nodes * num_timesteps * 1)\n",
+    "    # 定义前向传播函数\n",
     "    def forward(self, x, adj):\n",
-    "        # Apply the graph convolution only once per batch\n",
-    "        x = x.mean(dim=1)  # Average over time to get a single representation per node\n",
+    "        # 从输入x中提取批次大小、时间步数、节点数和特征数\n",
+    "        batch_size, num_timesteps, num_nodes, num_features = x.shape\n",
+    "        # 调整x的形状，合并批次和时间步维度\n",
+    "        x = x.view(batch_size * num_timesteps, num_nodes, num_features)\n",
+    "        # 应用图卷积层并使用ReLU激活函数\n",
     "        x = F.relu(self.gc1(x, adj))\n",
-    "        # Repeat the graph convolution output for each timestep\n",
-    "        x = x.unsqueeze(1).repeat(1, num_timesteps, 1)\n",
-    "        # Process sequences using LSTM\n",
+    "        # 将x的形状调整回包含时间步的三维张量形状\n",
+    "        x = x.view(batch_size, num_timesteps, -1)\n",
+    "        # 将处理过的x通过LSTM层\n",
     "        x, _ = self.lstm(x)\n",
-    "        x = self.fc(x)\n",
-    "        \n",
-    "        return x"
+    "        # 从LSTM输出中选择最后一个时间步的数据，并通过全连接层处理\n",
+    "        x = self.fc(x[:, -1, :])\n",
+    "        # 将输出x的形状调整为（批次大小，时间步数，节点数，单一预测）\n",
+    "        x = x.view(batch_size, num_timesteps, num_nodes, 1)\n",
+    "        # 返回模型的输出\n",
+    "        return x\n"
    ]
   },
   {
