--- a/TimeGPT/Analysis.ipynb
+++ b/TimeGPT/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,33 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(200, 3) (439298, 2)\n"
+      "(5000, 3) (439298, 2)\n"
      ]
     }
    ],
    "source": [
-    "fcst_df = pd.read_csv('./data/all_forecasts.csv')\n",
-    "eval_df = pd.read_csv('./data/loop_sensor_test_baseline.csv')\n",
+    "forecast_file = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_1_5000.csv'\n",
+    "eval_file = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/submission_song.csv'\n",
+    "# eval_file = './data/loop_sensor_test_baseline.csv'\n",
+    "\n",
+    "fcst_df = pd.read_csv(forecast_file)\n",
+    "eval_df = pd.read_csv(eval_file)\n",
     "print(fcst_df.shape, eval_df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Mean Absolute Error (MAE) is: 53.101834030151366\n"
+      "The Mean Absolute Error (MAE) is: 74.94557024745941\n"
      ]
     }
    ],
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +65,14 @@
      "output_type": "stream",
      "text": [
       "(439298, 2)\n",
-      "Updated eval_df has been saved to 'submission_051_01.csv'.\n"
+      "Updated eval_df has been saved to ./data/submission_0514_03.csv.\n"
      ]
     }
    ],
    "source": [
+    "eval_file = './data/loop_sensor_test_baseline.csv'\n",
+    "eval_df = pd.read_csv(eval_file)\n",
+    "file_saved = './data/submission_0514_03.csv'\n",
     "# Merge the DataFrames on 'id' and update 'estimate_q' in eval_df\n",
     "merged_df = eval_df.merge(fcst_df[['id', 'TimeGPT']], on='id', how='left')\n",
     "\n",
@@ -76,9 +83,9 @@
     "merged_df.drop(columns=['TimeGPT'], inplace=True)\n",
     "print(merged_df.shape)\n",
     "# Save the modified eval_df to a new CSV file\n",
-    "merged_df.to_csv('./data/submission_0514_01.csv', index=False)\n",
+    "merged_df.to_csv(file_saved, index=False)\n",
     "\n",
-    "print(\"Updated eval_df has been saved to 'submission_051_01.csv'.\")\n"
+    "print(f\"Updated eval_df has been saved to {file_saved}.\")\n"
    ]
   }
  ],
