--- a/TimeGPT/Time_data.ipynb
+++ b/TimeGPT/Time_data.ipynb
@@ -11,36 +11,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./data/loop_sensor_test_x_with_q_12.csv')"
+    "file_1 = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_1_2000.csv'\n",
+    "file_2 = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_2001_3000.csv'\n",
+    "file_3 = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_3001_4000.csv'\n",
+    "file_4 = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_4001_5000.csv'\n",
+    "file_merged = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_1_5000.csv'\n",
+    "\n",
+    "df_1 = pd.read_csv(file_1)\n",
+    "df_2 = pd.read_csv(file_2)\n",
+    "df_3 = pd.read_csv(file_3)\n",
+    "df_4 = pd.read_csv(file_4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 3)\n",
+      "Merged DataFrame has been saved to '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_1_5000.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenate the DataFrames\n",
+    "df_merged = pd.concat([df_1, df_2,\n",
+    "                       df_3, df_4\n",
+    "                       ], ignore_index=True)\n",
+    "print(df_merged.shape)\n",
+    "# Save the merged DataFrame to a new CSV file\n",
+    "df_merged.to_csv(file_merged, index=False)\n",
+    "\n",
+    "print(f\"Merged DataFrame has been saved to '{file_merged}'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(439298, 16)"
+       "(2000, 3)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df_merged.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -65,146 +100,113 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>iu_ac</th>\n",
        "      <th>t_1h</th>\n",
-       "      <th>etat_barre</th>\n",
-       "      <th>q1</th>\n",
-       "      <th>q2</th>\n",
-       "      <th>q3</th>\n",
-       "      <th>q4</th>\n",
-       "      <th>q5</th>\n",
-       "      <th>q6</th>\n",
-       "      <th>q7</th>\n",
-       "      <th>q8</th>\n",
-       "      <th>q9</th>\n",
-       "      <th>q10</th>\n",
-       "      <th>q11</th>\n",
-       "      <th>q12</th>\n",
+       "      <th>TimeGPT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2023-01-02 00:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1419.0</td>\n",
-       "      <td>1456.0</td>\n",
-       "      <td>1392.0</td>\n",
-       "      <td>1413.0</td>\n",
-       "      <td>1379.0</td>\n",
-       "      <td>1488.0</td>\n",
-       "      <td>1552.0</td>\n",
-       "      <td>1493.0</td>\n",
-       "      <td>1505.0</td>\n",
-       "      <td>1310.0</td>\n",
-       "      <td>1288.0</td>\n",
-       "      <td>1184.0</td>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>1195.937866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "      <td>2023-01-03 05:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1603.0</td>\n",
-       "      <td>1815.0</td>\n",
-       "      <td>1727.0</td>\n",
-       "      <td>1451.0</td>\n",
-       "      <td>1341.0</td>\n",
-       "      <td>1302.0</td>\n",
-       "      <td>1164.0</td>\n",
-       "      <td>940.0</td>\n",
-       "      <td>622.0</td>\n",
-       "      <td>349.0</td>\n",
-       "      <td>259.0</td>\n",
-       "      <td>273.0</td>\n",
+       "      <td>229.137558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>5</td>\n",
        "      <td>2023-01-04 10:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1304.0</td>\n",
-       "      <td>1144.0</td>\n",
-       "      <td>866.0</td>\n",
-       "      <td>622.0</td>\n",
-       "      <td>399.0</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>248.0</td>\n",
-       "      <td>385.0</td>\n",
-       "      <td>811.0</td>\n",
-       "      <td>1303.0</td>\n",
-       "      <td>1542.0</td>\n",
-       "      <td>1495.0</td>\n",
+       "      <td>1469.908813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>5</td>\n",
        "      <td>2023-01-05 15:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>379.0</td>\n",
-       "      <td>328.0</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>929.0</td>\n",
-       "      <td>1383.0</td>\n",
-       "      <td>1651.0</td>\n",
-       "      <td>1804.0</td>\n",
-       "      <td>1675.0</td>\n",
-       "      <td>1744.0</td>\n",
-       "      <td>1761.0</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>1612.0</td>\n",
+       "      <td>1489.043457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
        "      <td>2023-01-06 20:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1622.0</td>\n",
-       "      <td>1688.0</td>\n",
-       "      <td>1648.0</td>\n",
-       "      <td>1646.0</td>\n",
-       "      <td>1612.0</td>\n",
-       "      <td>1700.0</td>\n",
-       "      <td>1792.0</td>\n",
-       "      <td>1513.0</td>\n",
-       "      <td>1722.0</td>\n",
-       "      <td>1842.0</td>\n",
-       "      <td>1924.0</td>\n",
-       "      <td>1948.0</td>\n",
+       "      <td>1894.736206</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  iu_ac                 t_1h  etat_barre      q1      q2      q3      q4  \\\n",
-       "0   1      5  2023-01-02 00:00:00           3  1419.0  1456.0  1392.0  1413.0   \n",
-       "1   2      5  2023-01-03 05:00:00           3  1603.0  1815.0  1727.0  1451.0   \n",
-       "2   3      5  2023-01-04 10:00:00           3  1304.0  1144.0   866.0   622.0   \n",
-       "3   4      5  2023-01-05 15:00:00           3   379.0   328.0   500.0   929.0   \n",
-       "4   5      5  2023-01-06 20:00:00           3  1622.0  1688.0  1648.0  1646.0   \n",
-       "\n",
-       "       q5      q6      q7      q8      q9     q10     q11     q12  \n",
-       "0  1379.0  1488.0  1552.0  1493.0  1505.0  1310.0  1288.0  1184.0  \n",
-       "1  1341.0  1302.0  1164.0   940.0   622.0   349.0   259.0   273.0  \n",
-       "2   399.0   275.0   248.0   385.0   811.0  1303.0  1542.0  1495.0  \n",
-       "3  1383.0  1651.0  1804.0  1675.0  1744.0  1761.0  1800.0  1612.0  \n",
-       "4  1612.0  1700.0  1792.0  1513.0  1722.0  1842.0  1924.0  1948.0  "
+       "   id                 t_1h      TimeGPT\n",
+       "0   1           2023-01-02  1195.937866\n",
+       "1   2  2023-01-03 05:00:00   229.137558\n",
+       "2   3  2023-01-04 10:00:00  1469.908813\n",
+       "3   4  2023-01-05 15:00:00  1489.043457\n",
+       "4   5  2023-01-06 20:00:00  1894.736206"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_to_sort = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_2001_3000.csv'\n",
+    "df_sort = pd.read_csv(file_to_sort)\n",
+    "df_sort.iloc[-30:, df_sort.columns.get_loc('id')] = range(2971, 2971 + 30)\n",
+    "df_sort.to_csv(file_to_sort, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File has been updated with new ids starting from 2001.\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_to_sort = '/media/ssd4t/misaki/Paris-City-Brain-Traffic-Flow-Forecasting/TimeGPT/data/forecasts_4001_5000.csv'\n",
+    "start = 4001\n",
+    "df_sort = pd.read_csv(file_to_sort)\n",
+    "# Drop the original 'id' column if it exists\n",
+    "if 'id' in df_sort.columns:\n",
+    "    df_sort.drop(columns=['id'], inplace=True)\n",
+    "\n",
+    "# Reset the index and update it to start from 2001\n",
+    "df_sort.reset_index(drop=True, inplace=True)\n",
+    "df_sort.index += start\n",
+    "# Save the updated DataFrame back to a CSV file\n",
+    "df_sort.to_csv(file_to_sort, index=True, index_label='id')\n",
+    "\n",
+    "print(\"File has been updated with new ids.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sort.drop(columns=['id.2'], inplace=True)\n",
+    "df_sort.to_csv(file_to_sort, index=True, index_label='id')"
    ]
   },
   {
